# SecretSanta

./: CMakeLists.txt  README.md  dati.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
smtp/lib/: libSmtpMime.so.2.0
